[build-system]
requires = ["setuptools>=61", "hatch", "jupyter_packaging~=0.10.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"HomePage" = "https://plotly.com/python/"
"Documentation" = "https://plotly.com/python/"
"Github" = "https://github.com/plotly/plotly.py"
"Changelog" = "https://github.com/plotly/plotly.py/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
markers = [
    "nodev: mark a test as nodev",
    "matplotlib: mark a test as matplotlib"
]

[project]
name = "plotly"
authors = [
    { name = "Chris P", email = "chris@plot.ly" }
]
maintainers = [
    { name="Martha Cryan", email="martha.cryan@plot.ly" },
    { name="Emily Kellison-Linn", email="emily@plot.ly" }
]
description = "An open-source interactive data visualization library for Python"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.8"
license = {file="LICENSE.txt"}
version = "6.1.2"
dependencies = [
    "narwhals>=1.15.1",
    "packaging"
]

[project.optional-dependencies]
express = ["numpy"]
kaleido = ["kaleido==1.0.0rc15"]
dev = [
    # pin precise version of ruff to prevent accidental reformatting in case its defaults are updated
    "ruff==0.11.12",

    # other dependencies required to test and build
    "anywidget",
    "build",
    "colorcet",
    "geopandas",
    "inflect",
    "jupyter",
    "kaleido==1.0.0rc15",
    "numpy",
    "pandas",
    "pdfrw",
    "pillow",
    "plotly-geo",
    "polars",
    "pyarrow",
    "pyshp",
    "pytest",
    "pytz",
    "requests",
    "scipy",
    "scikit-image",
    "shapely",
    "statsmodels",
    "xarray"
]

[project.scripts]
plotly_get_chrome = "plotly.io._kaleido:get_chrome"

[tool.setuptools.packages.find]
where = ["."]
include = ["plotly*", "_plotly*"]
exclude = ["__pycache__*", "tests*"]

[tool.setuptools.package-data]
plotly = [
    "package_data/*",
    "package_data/templates/*",
    "package_data/datasets/*",
]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"
auto_data_files = true

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder]
editable-frontend = true

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = ["jlpm"]
source_dir = "js"
build_dir = "plotly/labextension"
skip_symlink = true

[tool.setuptools.data-files]
"share/jupyter/labextensions/jupyterlab-plotly" = [
  "plotly/labextension/package.json",
  "js/install.json"
]

"share/jupyter/labextensions/jupyterlab-plotly/static" = [
  "plotly/labextension/static/*.js"
]
